# new-web

./: CITATION.cff  README.md  _config.yml  _toc.yml  bibtex.bib  intro.md  pyproject.toml
_build/.doctrees/: README.doctree  environment.pickle  intro.doctree  notebooks.doctree
_build/.doctrees/docs/01-intro/: intro.doctree
_build/.doctrees/docs/02-data/: data.doctree
_build/.doctrees/docs/02-prep/: prep.doctree
_build/.doctrees/docs/03-prep/: prep.doctree
_build/.doctrees/docs/03-supervised/: supervised.doctree
_build/.doctrees/docs/04-supervised/: supervised.doctree
_build/.doctrees/docs/04-unsupervised/: unsupervised.doctree
_build/.doctrees/docs/05-deep/: deep.doctree
_build/.doctrees/docs/05-unsupervised/: unsupervised.doctree
_build/.doctrees/docs/06-deep/: deep.doctree
_build/.doctrees/docs/06-rl/: rl.doctree
_build/.doctrees/docs/07-cv/: cv.doctree
_build/.doctrees/docs/07-rl/: rl.doctree
_build/.doctrees/docs/08-cv/: cv.doctree
_build/.doctrees/myfirstbook/: intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  README.html  genindex.html  intro.html  notebooks.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.md  intro.md
_build/html/myfirstbook/: intro.html  markdown-notebooks.html  markdown.html  notebooks.html
_build/jupyter_execute/: notebooks.ipynb
_build/jupyter_execute/myfirstbook/: markdown-notebooks.ipynb  notebooks.ipynb
docs/01-intro/: intro.md  references.bib
docs/01-intro/01-history/: history.md
docs/06-deep/: deep.md
(+66 files in other folders)
