[tool.poetry]
name = "poetry add jupyter-book ipykernel pandas polars altair plotly ghp-import vega-datasets"
version = "poetry run jupyter-book create myfirstbook/"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
